--- a/.github/workflows/webpagetest-action-test.yml
+++ b/.github/workflows/webpagetest-action-test.yml
@@ -1,5 +1,8 @@
 name: WebPageTest TEST-env
-on: workflow_dispatch 
+on:
+  workflow_run:
+    workflows: ["Workflow Dispatch"]
+    types: [completed] #requested
 
 jobs:
   build:
