--- a/.github/workflows/webpagetest-action-test.yml
+++ b/.github/workflows/webpagetest-action-test.yml
@@ -3,6 +3,7 @@ on:
   workflow_run:
     workflows: ["Workflow Dispatch"]
     types: [completed] #requested
+  workflow_dispatch:
 
 jobs:
   build:
