--- a/.github/workflows/webpagetest-action-test.yml
+++ b/.github/workflows/webpagetest-action-test.yml
@@ -22,4 +22,5 @@ jobs:
           label: 'WebPageTest TEST-env'
           budget: 'wpt-budget.json'
           wptOptions: 'wpt-options.json'
+          notifyEmail: 'ilyasokolov@marcatopartners.com'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
