--- a/.github/workflows/webpagetest-action-test.yml
+++ b/.github/workflows/webpagetest-action-test.yml
@@ -9,7 +9,27 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: WebPageTest TEST-env
-    steps:    
+    steps:
+
+
+      - name: Get current time
+        uses: josStorer/get-current-time@v2.0.1
+        id: current-time
+        with:
+          format: YYYYMMDD-HH
+          utcOffset: "+08:00"
+      - name: Use current time
+        env:
+          TIME: "${{ steps.current-time.outputs.time }}"
+          R_TIME: "${{ steps.current-time.outputs.readableTime }}"
+          F_TIME: "${{ steps.current-time.outputs.formattedTime }}"
+          YEAR: "${{ steps.current-time.outputs.year }}"
+          DAY: "${{ steps.current-time.outputs.day }}"
+        run: echo $TIME $R_TIME $F_TIME $YEAR $DAY
+
+
+
+    
       - name: Checkout
         uses: actions/checkout@v2
         
@@ -19,7 +39,7 @@ jobs:
           apiKey: ${{ secrets.WPT_API_KEY }}
           urls: |
             https://adventures:polaris@adventures.polaris-test.run/
-          label: 'WebPageTest TEST-env'
+          label: 'WebPageTest TEST-env $DAY ${{ steps.current-time.outputs.day }}'
           budget: 'wpt-budget.json'
           wptOptions: 'wpt-options.json'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
