--- a/.github/workflows/webpagetest-action-test.yml
+++ b/.github/workflows/webpagetest-action-test.yml
@@ -13,8 +13,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         
-      - name: WebPageTest
-        uses: WPO-Foundation/webpagetest-github-action@main
+      - name: WebPageTest GitHub Action
+        uses: WPO-Foundation/webpagetest-github-action@v1.1.3
+
         with:
           apiKey: ${{ secrets.WPT_API_KEY }}
           urls: |
