--- a/.github/workflows/webpagetest-action-test.yml
+++ b/.github/workflows/webpagetest-action-test.yml
@@ -11,7 +11,7 @@ jobs:
     name: WebPageTest TEST-env
     steps:        
       - name: WebPageTest GitHub Action
-        uses: WPO-Foundation/webpagetest-github-action@v.1.0.0
+        uses: WPO-Foundation/webpagetest-github-action@v.1.1.2
 
 
         with:
@@ -20,4 +20,5 @@ jobs:
             https://adventures:polaris@adventures.polaris-test.run/
           label: 'WebPageTest TEST-env '
           budget: 'wpt-budget.json'
+          wptOptions: 'wpt-options.json'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
