--- a/.github/workflows/webpagetest-action-test.yml
+++ b/.github/workflows/webpagetest-action-test.yml
@@ -20,6 +20,6 @@ jobs:
           urls: |
             https://adventures:polaris@adventures.polaris-test.run/
           label: 'WebPageTest TEST-env '
-          budget: 'wpt-budget.json'
-          wptOptions: 'wpt-options.json'
+          budget: './wpt-budget.json'
+          wptOptions: './wpt-options.json'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
