--- a/.github/workflows/webpagetest-action-test.yml
+++ b/.github/workflows/webpagetest-action-test.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Get current date
+        id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
       - name: Test with environment variables
         run: echo $NOW
@@ -29,3 +30,5 @@ jobs:
           budget: 'wpt-budget.json'
           wptOptions: 'wpt-options.json'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          NOW: ${{ steps.date.outputs.date }}
