--- a/.github/workflows/webpagetest-action-test.yml
+++ b/.github/workflows/webpagetest-action-test.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2        
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d-%H-%M')"
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d-%H:%M')"
       - name: Date display
         run: echo $NOW
         env:
@@ -29,3 +29,5 @@ jobs:
           budget: 'wpt-budget.json'
           wptOptions: 'wpt-options.json'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          NOW: ${{ steps.date.outputs.date }}
