--- a/.github/workflows/webpagetest-action-test.yml
+++ b/.github/workflows/webpagetest-action-test.yml
@@ -25,7 +25,7 @@ jobs:
             https://adventures:polaris@adventures.polaris-test.run/
           label: "${{env.NOW}} TEST-env"
           budget: 'wpt-budget.json'
-          wptOptions: 'wpt-options.json'
+          wptOptions: 'wpt-options2.json'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         env:
           NOW: ${{ steps.date.outputs.date }}
