--- a/.github/workflows/webpagetest-action-test-mobile.yml
+++ b/.github/workflows/webpagetest-action-test-mobile.yml
@@ -23,7 +23,7 @@ jobs:
           apiKey: ${{ secrets.WPT_API_KEY }}
           urls: |
             https://adventures:polaris@adventures.polaris-test.run/
-          label: "${{env.NOW}} TEST-env"
+          label: "${{env.NOW}} TEST-env MOB"
           budget: 'wpt-budget.json'
           wptOptions: 'wpt-options.json'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
